# nixos-dotfiles

./: .gitignore  .sops.yaml  Makefile  configuration.nix  docker-compose.yml  dump.rdb  flake.nix  hardware-configuration.nix  home.nix  nix_shell_env.txt  nix_shell_env_sorted.txt  normal_env.txt  normal_env_sorted.txt  pyproject.toml  shell.nix
.github/workflows/: deploy.yml
home/: ags.nix  ax-shell.nix  battery-monitor.nix  browser.nix  communication.nix  discord.nix  flatpak.nix  gaming.nix  gnome.nix  gtk.nix  home.nix  hyprpanel.nix  icons-theme.nix  info-fetchers.nix  lowBattery.nix  media-tools.nix  monitor_servers.nix  music-production.nix  music.nix  neovim.nix  nwg-dock.nix  pop-shell.nix  rofi.nix  scripts.nix  sh.nix  sops.nix  spotify.nix  stylix.nix  sunset-at-night.nix  syncthing.nix  system-utilities.nix  taskwarrior.nix  ulauncher.nix  user.nix  wlsunset.nix  wofi.nix
home/configfiles/: .taskrc
hosts/: common.nix  gui.nix  serverstuff.nix
modules/: audio.nix  blocked-hosts.txt  bootloader.nix  ci-user.nix  cloudflare-tunnel.nix  devshells.nix  display-manager.nix  docker.nix  energy-management.nix  extraHosts.nix  flatpak.nix  fonts.nix  gaming.nix  gc.nix  gdm.nix  gnome.nix  gnupg.nix  hardware.nix  hyprland.nix  hyprlandWM.nix  light.nix  locale.nix  networking.nix  nginx.nix  plex.nix  programs.nix  services.nix  sops.nix  stylix.nix  syncthing.nix  system.nix  user.nix  vm-module.nix  waydroid.nix  wayland.nix  xremap.nix  xserver.nix
scripts/: wofi-bookmarks.sh  wofi-dir-script.sh  wofi-wallpaper.sh  yazi.sh
secrets/: secrets.yaml
(+95 files in other folders)
